# ws2812_screen_sync

./: Cargo.toml  README.md  shell.nix
micropython/: main.py  shell.nix
src/: config.rs  get_color.rs  main.rs  monitor.rs
