[package]
name = "kotu-m2-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3"
captrs = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
enigo = "0.0.14"
serialport = "4.0.1"
hidapi = "1.3.2"